--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,5 +17,27 @@
             <button type="submit">Genrate </button>
             </form>
         </div>
+    <div>
+        <%if(locals.urls) { %>
+            <table>
+                <thread>
+                    <th>S.no </th>
+                    <th>ShortID </th>
+                    <th>Redirect </th>
+                    <th>Clicks </th>
+                    </thread>
+                <tbody>
+                    <%urls.forEach((url, index) => {%>
+                        <tr>
+                        <td><%= index + 1%> </td>
+                        <td><%=url.shortId%> </td>
+                        <td><%=url.redirectURL%> </td>
+                        <td><%=url.visitHistory.length%> </td>
+                        </tr>
+                        <%})%>
+                    </tbody>
+                </table>
+            <%}%>
+        </div>
 </body>
 </html>
